[package]
name = "lintia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc="*"

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.3.10", features = ["cargo"] }
colored = "2.0.0"
crc32c = "0.6.3"
hex = "0.4.3"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
toml = "0.7.4"
tree-sitter = "0.20.10"
uuid = "1.4.0"
